# contextgraph

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  design.md  docker-compose.yml  pyproject.toml
demo/: __init__.py  agent.py  cli.py  policy.py  tools.py
docs/: QUICKSTART_CLAUDE.md  QUICKSTART_LANGGRAPH.md  QUICKSTART_OPENAI.md
examples/: claude_agent_example.py  demo.py  langgraph_example.py  openai_agents_example.py
sdk/python/: README.md  pyproject.toml
sdk/python/contextgraph/: __init__.py
sdk/python/contextgraph/core/: __init__.py  client.py  config.py  models.py
sdk/python/contextgraph/integrations/: __init__.py  claude_agent.py  langgraph.py  openai_agents.py
sdk/python/tests/: __init__.py  test_claude_agent.py  test_langgraph.py  test_openai_agents.py
server/: main.py
spec/jsonschema/: decision_record.json  events.json
storage/postgres/: schema.sql
tests/: test_server.py
ui/: index.html
