[project]
name = "contextgraph-workspace"
version = "0.1.0"
description = "Decision traces as data. Context as a graph."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn>=0.27.0,<1.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.20.0,<1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
]

[tool.uv.sources]
contextgraph = { path = "sdk/python" }

[tool.uv.workspace]
members = ["sdk/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["contextgraph", "server"]
branch = true
