[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextgraph"
version = "0.1.0"
description = "Decision traces as data. Context as a graph."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ContextGraph Contributors" }
]
keywords = ["agents", "decisions", "tracing", "audit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
server = ["fastapi>=0.100", "uvicorn>=0.20", "psycopg2-binary>=2.9"]
openai = []  # No extra deps, uses SDK's types
claude = []  # No extra deps, uses SDK's types
langgraph = []  # No extra deps, uses SDK's types
all = ["psycopg2-binary>=2.9", "fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/contextgraph/contextgraph"
Documentation = "https://contextgraph.dev"
Repository = "https://github.com/contextgraph/contextgraph"

[tool.hatch.build.targets.wheel]
packages = ["contextgraph"]
