[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextgraph"
version = "0.1.0"
description = "Decision traces as data. Context as a graph."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ContextGraph Contributors" }
]
keywords = ["agents", "decisions", "tracing", "audit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.9,<3.0",
]
server = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn>=0.27.0,<1.0",
    "psycopg2-binary>=2.9.9,<3.0",
]
openai = []
claude = []
langgraph = []
all = [
    "psycopg2-binary>=2.9.9,<3.0",
    "fastapi>=0.109.0,<1.0",
    "uvicorn>=0.27.0,<1.0",
]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "pytest-cov>=4.1.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/contextgraph/contextgraph"
Documentation = "https://contextgraph.dev"
Repository = "https://github.com/contextgraph/contextgraph"

[tool.hatch.build.targets.wheel]
packages = ["contextgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["contextgraph", "server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
